--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,4 @@
-certifi==2017.4.17
-chardet==3.0.4
-click==6.7
-Flask==0.12.2
-Flask-SQLAlchemy==2.2
-gunicorn==19.7.1
-idna==2.5
-itsdangerous==0.24
-Jinja2==2.9.6
-MarkupSafe==1.0
-psycopg2==2.7.1
-requests==2.18.1
-SQLAlchemy==1.1.10
-urllib3==1.21.1
-Werkzeug==0.12.2
+SQLAlchemy==1.2.11
+requests==2.9.1
+Flask==1.0.2
+flask_sqlalchemy==2.3.2
