--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ before_script:
 env:
   - DATABASE_URI=postgresql://postgres:postgres@127.0.0.1/test_isitdown
 script:
-  - pytest
+  - python -m pytest
