--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 pytest
 psycopg2-binary
-SQLAlchemy==1.2.11
+SQLAlchemy>=1.3.0
 requests>=2.20.0
 Flask==1.0.2
-flask_sqlalchemy==2.3.2
+flask_sqlalchemy==2.4.0
 flask_migrate
