Update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ install:
 before_script:
   - psql -c 'create database test_isitdown;' -U postgres
 env:
-  - DATABASE_URI=postgresql://postgres:postgres@127.0.0.1/test_isitdown
+  - ISITDOWN_DATABASE_URI=postgresql://postgres:postgres@127.0.0.1/test_isitdown
+  - ISITDOWN_SECRET_KEY=A-secret-key
 script:
   - python -m pytest --cov=./
 after_success:
