--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-Werkzeug==0.16.0
+Werkzeug==1.0.1
 pytest==5.1.3
-psycopg2-binary==2.8.3
-SQLAlchemy>=1.3.0
-requests>=2.20.0
-Flask==1.0.2
+psycopg2-binary==2.8.6
+SQLAlchemy>=1.3.19
+requests>=2.24.0
+Flask==1.1.2
 flask_sqlalchemy==2.4.0
 Flask-Migrate==2.5.2
-waitress==1.4.3
+waitress==1.4.4
+coverage==5.3
